Disallow static child classes to inherit parent's generic type parameters